--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ wandb
 *.dat
 report.json
 benchmark_data
+data/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -169,3 +170,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+extracted_tables/*
